--- a/package.json
+++ b/package.json
@@ -12,7 +12,22 @@
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "nuxt": "^3.8.2",
+    "ts-node": "^10.9.1",
     "vue": "^3.3.8",
     "vue-router": "^4.2.5"
+  },
+  "dependencies": {
+    "@headlessui/vue": "^1.7.16",
+    "@heroicons/vue": "^2.0.18",
+    "@nuxt/content": "^2.9.0",
+    "@nuxtjs/tailwindcss": "^6.10.0",
+    "@peculiar/webcrypto": "^1.4.3",
+    "@tailwindcss/forms": "^0.5.7",
+    "buffer": "^6.0.3",
+    "prompt-sync": "^4.2.0",
+    "readline": "^1.3.0",
+    "tsx": "^4.3.0",
+    "typescript": "^5.3.2",
+    "vite-plugin-node-polyfills": "^0.16.0"
   }
 }
