--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@peculiar/webcrypto": "^1.4.3",
     "@tailwindcss/forms": "^0.5.7",
     "buffer": "^6.0.3",
+    "jszip": "^3.10.1",
     "prompt-sync": "^4.2.0",
     "readline": "^1.3.0",
     "tsx": "^4.3.0",
